--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ after_success:
   - docker build -t achalmulesoft/multi-worker ./worker
   # login to the docker cli
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+# push images to docker hub
   - docker push achalmulesoft/multi-client
   - docker push achalmulesoft/multi-nginx
   - docker push achalmulesoft/multi-server
